--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -186,7 +186,7 @@
         </div>
     </div>
 
-	<bio-swoosh color="#0A0A2C" direction="down" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#0A0A2C" direction="down" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
 </section>
 
@@ -215,6 +215,9 @@
 </section>
 
 <footer class="footer">
+
+	<bio-swoosh color="#f8fbfd" direction="up" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+
     <div class="row row--reducedWidth">
         <div class="col">
             <a href="#">
