--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -154,7 +154,7 @@
     <div class="row row--reducedWidth">
         <div class="col">
                 <bio-section-headline inverted data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
-                    Develop digital experiences </br> <strong>Flexible. Constant. Across All Devices.</strong>
+                    Develop digital experiences </br> <strong>Flexible. Constant.<br>Across All Devices.</strong>
                 </bio-section-headline>
             <div class="extendedBenefits__container">
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
