--- a/src/components/BioModal/styles.scss
+++ b/src/components/BioModal/styles.scss
@@ -43,10 +43,11 @@
 				}
 
 				img {
-					transition: 0.2s ease;
+					transition: 0.5s ease;
 				}
 				
 				&:hover {
+					transform: scale(1.2);
 					img {
 						transform: rotate(180deg);
 					}
@@ -57,6 +58,7 @@
 				height: 100%;
 			}
 		}
+		
 		.backdrop {
 			position: fixed;
 			display: none;
