--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -181,7 +181,7 @@
 }
 
 .resources {
-	padding: 90px 0;
+	padding: 90px 0 180px 0;
 	background: $bio-gray;
 
 	.col {
@@ -189,10 +189,14 @@
 	}
 
 	h3 {
-		padding-top: 40px;
+		padding: 40px 0 20px 0;
 		color: $light-orange;
 		text-transform: none;
 		text-align: center;
+
+		@include breakpoint($large) {
+			padding: 40px 0 0 0;
+		}
 
 		&.resources__headline--blue {
 			color: $dark-blue;
@@ -386,13 +390,11 @@
 	}
 
 	&__githubLogo {
-		position: absolute;
-		top: 70px;
-		left: 0;
-		transform: rotate(90deg);
-		width: 70px;
-
+		display: none;
+		
 		@include breakpoint($large) {
+			display: block;
+			position: absolute;
 			top: auto;
 			left: auto;
 			bottom: 0;
