- implemented scroll tracking - modified main sections for tracking: added ids and updated ids and classNames (for consistency) - link tracking: track href instead of link text or title

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -188,7 +188,7 @@
 	}
 }
 
-.soEasy {
+.installation {
 	@include clearfix();
 	position: relative;
 	background-image: url("../../_assets/BioEasySetUp/background.svg");
