--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -19,7 +19,7 @@
     </div>
 </header>
 
-<section class="benefits" id="benefits">
+<section id="benefits" class="benefits">
     <div class="row row--reducedWidth">
         <div class="col">
             <div class="benefits__claim">
@@ -59,11 +59,11 @@
 
 </section>
 
-<section class="scrollAnimation">
+<section id="scrollAnimation" class="scrollAnimation">
 	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
 </section>
 
-<section class="knowMore">
+<section id="knowMore" class="knowMore">
 
 	<bio-swoosh color="#0A0A2C" direction="up" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
@@ -77,14 +77,14 @@
 
 </section>
 
-<section class="soEasy">
+<section id="installation" class="installation">
 
 	<bio-swoosh color="#f8fbfd" direction="up" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
     <div class="row row--reducedWidth">
         <div class="col">
-            <img class="soEasy__line" src="../_assets/BioEasySetUp/line.svg">
-            <div class="soEasy__intro">
+            <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
+            <div class="installation__intro">
                 <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">Biotope Installation </br> <strong>Start building within minutes.</strong></bio-section-headline>
                 <p>
                     No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project -
@@ -121,7 +121,7 @@
     </div>
 </section>
 
-<section class="resources">
+<section id="resources" class="resources">
         <div class="row row--reducedWidth">
             <div class="col col--large-6">
                 <h3 class="resources__headline--blue">Code & Resources</h3>
@@ -160,7 +160,7 @@
         </div>
 </section>
 
-<section class="extendedBenefits">
+<section id="extendedBenefits" class="extendedBenefits">
 
 	<bio-swoosh color="#0A0A2C" direction="up" height="270" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
@@ -190,7 +190,7 @@
 
 </section>
 
-<section class="company">
+<section id="company" class="company">
     <div class="row row--reducedWidth">
         <div class="col">
             <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
