--- a/src/components/BioBenefit/styles.scss
+++ b/src/components/BioBenefit/styles.scss
@@ -35,7 +35,7 @@
                 color: $bio-white;
             }
             p {
-                color: $lightest-blue;
+                color: $bio-lighter-blue;
             }
         }
     }
