--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -17,7 +17,7 @@ $black: #000;
 $main-orange: #F17C61;
 $light-orange: #ED9560;
 $dark-blue: #5E7FD3;
-$darker-blue: #1F1F43;
+$darker-blue: #0a092d;
 $dark-blue-gray: #4e4f6b;
 $even-darker-blue: #0A0A2C;
 $light-blue: #87FBE1;
