--- a/src/resources/scss/fonts/_typography.scss
+++ b/src/resources/scss/fonts/_typography.scss
@@ -1,3 +1,5 @@
+// @import '../defaultSassImports.scss';
+
 %benefit-text {
     font-family: $font-family-body;
     font-weight: $font-weight-light;
@@ -16,9 +18,10 @@
     // font-size: 20px;
 }
 
-%paragraph {
+p {
     font-family: $font-family-body;
     font-weight: $font-weight-light;
+    color: $darker-blue;
 }
 
 %sectionHeadline {
