--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -137,6 +137,7 @@
 
 	@include breakpoint($xlarge) {
 		padding: 80px 0 120px;
+		
 		p {
 			font-size: 30px;
 			margin-bottom: 70px;
@@ -279,6 +280,10 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: center;
+		
+		@include breakpoint($medium) {
+			justify-content: space-between;
+		}
 	}
 }
 
@@ -319,6 +324,7 @@
 
 		img {
 			margin-right: 10px;
+			display: none;
 
 			@include breakpoint($medium) {
 				margin-right: 0;
@@ -327,7 +333,6 @@
 			&:last-child {
 				margin-right: 0;
 			}
-			display: none;
 
 			&:nth-child(1),
 			&:nth-child(2) {
