SEO fix: use proper h1- h4 headline structure optimized headline styles

--- a/src/components/BioModal/scaffolding/BioModal.hbs
+++ b/src/components/BioModal/scaffolding/BioModal.hbs
@@ -2,23 +2,12 @@
 
     <div class="row row--reducedWidth">
         <div class="col">
-            <div class="whosBehind">
-                <bio-section-headline>
+            <section class="whosBehind">
+                <h3>
                     Who's behind <br><strong>Biotope?</strong>
-                </bio-section-headline>
+                </h3>
 
-                <h2 class="whosBehind__headline">Core Group</h2>
-
-                <div class="whosBehind__list">
-                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
-                    </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
-                    </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
-                </div>
-
-                <h2 class="whosBehind__headline">Collaborators</h2>
+                <h4 class="whosBehind__headline">Core Group</h4>
 
                 <div class="whosBehind__list">
                     <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
@@ -28,7 +17,18 @@
                     <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
                 </div>
-            </div>
+
+                <h4 class="whosBehind__headline">Collaborators</h4>
+
+                <div class="whosBehind__list">
+                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                </div>
+            </section>
         </div>
     </div>
 
