--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -25,9 +25,9 @@
             <div class="benefits__claim">
                 <img src="../_assets/intro-main.svg" alt="">
                 <div>
-                    <h2>
-                        One Web Component Library. As Many Words As You Want.
-                    </h2>
+                    <h3>
+                        One Web Component Library. As Many Worlds As You Want.
+                    </h3>
                     <bio-paragraph data-resources="[{paths: ['components/BioParagraph/index.js']}]">
                        The superpower of Web Components is that they are reusable. Build them once and use them in any project across your whole ocmpany. 
                        Biotope helps you build Web Components quickly, makes sure they work tohether and reconciles them into a single library. 
@@ -85,7 +85,7 @@
         <div class="col">
             <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
             <div class="installation__intro">
-                <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">Biotope Installation </br> <strong>Start building within minutes.</strong></bio-section-headline>
+                <h3>Biotope Installation </br> <strong>Start building <br> within minutes.</strong></h3>
                 <p>
                     No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project -
                     Biotope works with any framework so you can build in the environment of your choice. And everyone else too. Build up your
@@ -166,9 +166,9 @@
 
     <div class="row row--reducedWidth">
         <div class="col">
-                <bio-section-headline inverted data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
-                    Develop digital experiences </br> <strong>Flexible. Constant. Across All Devices.</strong>
-                </bio-section-headline>
+                <h3 class="inverted">
+                    Develop digital experiences </br> <strong>Flexible. Constant.<br> Across All Devices.</strong>
+                </h3>
             <div class="extendedBenefits__container">
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-quality-focus.svg" title="Quality Focus">
@@ -193,9 +193,9 @@
 <section id="company" class="company">
     <div class="row row--reducedWidth">
         <div class="col">
-            <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
+            <h3>
                 You are in </br> <strong>good company</strong>
-            </bio-section-headline>
+            </h3>
             <div class="company__logos">
                 <img src="../_assets/logo-ui.svg" alt="Union Investment">
                 <img src="../_assets/logo-roche.svg" alt="Roche">
@@ -241,23 +241,12 @@
 
     <div class="row row--reducedWidth">
         <div class="col">
-            <div class="whosBehind">
-                <bio-section-headline>
+            <section class="whosBehind">
+                <h3>
                     Who's behind <br><strong>Biotope?</strong>
-                </bio-section-headline>
+                </h3>
 
-                <h2 class="whosBehind__headline">Core Group</h2>
-
-                <div class="whosBehind__list">
-                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
-                    </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
-                    </bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
-                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
-                </div>
-
-                <h2 class="whosBehind__headline">Collaborators</h2>
+                <h4 class="whosBehind__headline">Core Group</h4>
 
                 <div class="whosBehind__list">
                     <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
@@ -267,7 +256,18 @@
                     <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
                     <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
                 </div>
-            </div>
+
+                <h4 class="whosBehind__headline">Collaborators</h4>
+
+                <div class="whosBehind__list">
+                    <bio-collaborator-tile imgsrc="../_assets/marc.jpg">Marc Emmanuel
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/tiago.jpg">Tiago Marques
+                    </bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/timo.jpg">Timo Mayer</bio-collaborator-tile>
+                    <bio-collaborator-tile imgsrc="../_assets/danny.jpg">Danny Stey</bio-collaborator-tile>
+                </div>
+            </section>
         </div>
     </div>
 
