--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,5 +1,27 @@
 @import 'defaultSassImports.scss';
 
+section {
+	h3 {
+		@extend %sectionHeadline;
+		color: $bio-darkest-blue;
+		text-transform: uppercase;
+
+		strong {
+			@extend %sectionHeadlineStrong;
+			color: $bio-light-orange;
+		}
+
+		&.inverted {
+			color: $bio-white;
+		}
+	}
+
+	h4 {
+		@extend %headlineH4;
+
+	}
+}
+
 .splash {
 	font-family: $font-family-titles;
 	height: 800px;
@@ -61,7 +83,7 @@
 	&__uitoolchain {
 		width: 200px;
 		margin: 0 auto;
-		font-size: 15px;
+		font-size: 16px;
 		font-weight: 400;
 		line-height: 23px;
 
@@ -74,13 +96,15 @@
 
 	&__claim {
 		color: $bio-white;
-		max-width: 400px;
+		max-width: 450px;
 		margin: 0 auto;
-		padding: 20px 0;
-		font-size: 14px;
+		padding: 15px 0 20px;
+		font-size: 15px;
+		line-height: 23px;
 
 		@include breakpoint($large) {
 			margin: 0;
+			padding: 20px 0;
 			font-size: 18px;
 			max-width: 515px;
 		}
@@ -251,6 +275,7 @@
 }
 
 .whosBehind {
+
 	&__headline {
 		margin: 50px 0;
 	}
