--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -5,6 +5,7 @@ $font-family-body:    'Work Sans', sans-serif;
 $font-family-titles:        'Monda', sans-serif;
 $font-weight-light:         200;
 $font-weight-normal:        400;
+$font-weight-medium:        500;
 $font-weight-bold:          600;
 
 // Z-INDEXES
