--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -92,30 +92,40 @@
                     Web Component Library together and
                 </p>
             </div>
-            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/1.svg" alt="step one">
-                <h4>Install Package</h4>
-                <p>Install biotope as global package with npm.</p>
-                <code>npm install biotope -g</code>
+            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
+				imgsrc="_assets/BioEasySetUp/1.svg"
+				alt="step one"
+                headline="Install Package"
+                text="Install biotope as global package with npm."
+                code="npm install biotope -g">
             </bio-easy-set-up>
-            <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/2.svg" alt="step two">
-                <h4>Set Up Project</h4>
-                <p>Trust the CLI tool to set up your project. Run command to create biotope-boilerplate and choose preferences:</p>
-                <code>biotope create myEcosystem</code>
+            <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
+				imgsrc="_assets/BioEasySetUp/2.svg"
+				alt="step two"
+                headline="Set Up Project"
+                text="Trust the CLI tool to set up your project. Run command to create biotope-boilerplate and choose preferences:"
+                code="biotope create myEcosystem">
             </bio-easy-set-up>
-            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/3.svg" alt="step three">
-                <h4>Install Build-System</h4>
-                <p>The included build-system helps you to automatically build production-ready resources.</p>
-                <code>npm install</code>
+            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
+				imgsrc="_assets/BioEasySetUp/3.svg"
+				alt="step three"
+                headline="Install Build-System"
+                text="The included build-system helps you to automatically build production-ready resources."
+                code="npm install">
             </bio-easy-set-up>
-            <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/4.svg" alt="step four">
-                <h4>Run Build</h4>
-                <p>Change directory to the newly generated biotope instance and run it from there.</p>
-                <code>npm start</code>
+            <bio-easy-set-up position="left" data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
+				imgsrc="_assets/BioEasySetUp/4.svg"
+				alt="step four"
+                headline="Run Build"
+                text="Change directory to the newly generated biotope instance and run it from there."
+                code="npm start">
             </bio-easy-set-up>
-            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]" imgsrc="_assets/BioEasySetUp/5.svg" alt="step five">
-                <h4>Start Building Components</h4>
-                <p>Install the included build-ststem that helps you to automatically build product-ready resources</p>
-                <code>biotope generate</code>
+            <bio-easy-set-up data-resources="[{paths: ['components/BioEasySetUp/index.js']}]"
+				imgsrc="_assets/BioEasySetUp/5.svg"
+				alt="step five"
+                headline="Start Building Components"
+                text="Install the included build-ststem that helps you to automatically build product-ready resources"
+                code="biotope generate">
             </bio-easy-set-up>
         </div>
     </div>
