67 seo use h3 headlines instead of biosectionheadline component (#68)
 SEO fix: use proper h1- h4 headline structure
optimized headline styles

* refactor easy setup component structure

--- a/src/components/BioGithubCorner/styles.scss
+++ b/src/components/BioGithubCorner/styles.scss
@@ -1,9 +1,10 @@
 @import 'node_modules/@biotope/element/lib/host.mixin';
+@import '../../resources/scss/settings/settings';
 
 @include host('bio-github-corner') {
 	svg {
-		fill: #fd6c6c !important;
-		color: #fff;
+		fill: $bio-orange !important;
+		color: $bio-darker-blue;
 		position: absolute;
 		top: 0;
 		border: 0;
