--- a/src/components/BioModal/styles.scss
+++ b/src/components/BioModal/styles.scss
@@ -17,7 +17,7 @@
 			background-size: cover;
 			overflow-y: scroll;
 
-			@include breakpoint($medium) {
+			@include breakpoint($large) {
 				top: 5%;
 				left: 5%;
 				bottom: 5%;
