--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,5 +1,22 @@
 @import 'defaultSassImports.scss';
 
+section {
+	h3 {
+		@extend %sectionHeadline;
+		color: $bio-darkest-blue;
+		text-transform: uppercase;
+
+		strong {
+			@extend %sectionHeadlineStrong;
+			color: $bio-light-orange;
+		}
+
+		&.inverted {
+			color: $bio-white;
+		}
+	}
+}
+
 .splash {
 	font-family: $font-family-titles;
 	height: 800px;
@@ -61,7 +78,7 @@
 	&__uitoolchain {
 		width: 200px;
 		margin: 0 auto;
-		font-size: 15px;
+		font-size: 16px;
 		font-weight: 400;
 		line-height: 23px;
 
@@ -74,17 +91,19 @@
 
 	&__claim {
 		color: $bio-white;
-		max-width: 400px;
+		max-width: 450px;
 		margin: 0 auto;
 		padding: 20px 0;
 		font-size: 15px;
 		font-weight: 400;
-
+		line-height: 23px;
+		
 		@include breakpoint($large) {
 			margin: 0;
 			padding: 30px 0 20px 0;
 			font-size: 18px;
 			max-width: 515px;
+			line-height: 27px;
 		}
 	}
 
@@ -134,6 +153,10 @@
 
 	&__claimText {
 		margin: auto;
+
+		h3{
+			text-transform: none;
+		}
 	}
 
 	&__container {
@@ -173,7 +196,6 @@
 
 	p {
 		font-size: 20px;
-		margin-bottom: 40px;
 		color: $bio-white;
 	}
 
@@ -183,7 +205,6 @@
 		}
 		p {
 			font-size: 25px;
-			margin-bottom: 50px;
 		}
 	}
 
@@ -193,7 +214,6 @@
 		}
 		p {
 			font-size: 30px;
-			margin-bottom: 70px;
 		}
 	}
 }
@@ -225,7 +245,7 @@
 			display: block;
 			position: absolute;
 			top: -100px;
-			left: calc(50% - 38px - 1.2%);
+			left: calc(50% - 38px);
 			z-index: 2;
 		}
 
@@ -241,7 +261,11 @@
 	background: $bio-gray;
 
 	.row {
-		padding: 90px 0;
+		padding: 125px 0;
+
+		@include breakpoint($large) {
+			padding-top: 200px
+		}
 	}
 
 	.col {
@@ -265,6 +289,7 @@
 }
 
 .whosBehind {
+
 	&__headline {
 		margin: 50px 0;
 	}
@@ -274,12 +299,37 @@
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: center;
-		
+
 		@include breakpoint($medium) {
 			justify-content: space-between;
 		}
 	}
 }
+
+.imprint, .privacyPolicy {
+	h3 {
+		font-size: 50px;
+	}
+
+	h4 {
+		padding-top: 30px;
+	}
+
+	strong {
+		font-weight: 600;
+	}
+
+	p {
+		background:rgba(248, 251, 253, 0.5);
+	}
+
+	@include breakpoint($large) {
+		p {
+			width: 50%;
+		}
+	}
+}
+
 
 .extendedBenefits {
 	@include clearfix();
@@ -387,12 +437,15 @@
 			display: flex;
 		}
 	}
-
+	
 	&__githubLogo {
 		display: none;
-		
-		@include breakpoint($large) {
+
+		@include breakpoint($medium) {
 			display: block;
+		}
+
+		@include breakpoint($large) {
 			position: absolute;
 			top: auto;
 			left: auto;
@@ -412,7 +465,7 @@
 
 		@include breakpoint($medium) {
 			flex-grow: 1;
-			padding-top: 0;
+			padding: 0 0 0 20px;
 			font-size: 20px;
 		}
 
@@ -433,7 +486,9 @@
 		a {
 			margin-bottom: 10px;
 			color: $bio-black;
+			
 			&:hover {
+				cursor: pointer;
 				text-decoration: underline;
 			}
 
