--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -6,9 +6,9 @@
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
         <div class="splash__content">
             <h1 class="splash__biotope">biotope</h1>
-            <h2 class="splash__uitoolchain">Toolchain For lasting Design Systems</h2>
+            <h2 class="splash__uitoolchain">Toolchain For Lasting Design Systems</h2>
             <p class="splash__claim">
-                Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, apps or IoT - using a single library of Web Components.
+                Evolve your UI to stay ahead of developments on the web and in your company. Gain control of all your websites, Apps or IoT - using a single library of Web Components.
             </p>
             <bio-button title="See how it works" modifier="whiteText mediumLong"
                 data-resources="[{paths: ['components/BioButton/index.js']}]" url="#benefits"></bio-button>
@@ -29,7 +29,7 @@
                         One Web Component Library. As Many Worlds As You Want.
                     </h3>
                     <p>
-                       The superpower of Web Components is that they are reusable. Build them once and use them in any project across your whole ocmpany. 
+                        The superpower of Web Components is that they are reusable. Build them once and use them in any project across your whole company. 
                        Biotope helps you build Web Components quickly, makes sure they work tohether and reconciles them into a single library. 
                        This in turn gives you a superpower: Lasting control of your entire UI.
                     </p>
@@ -38,7 +38,7 @@
             </div>
             <div class="benefits__container">
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
-                    imgsrc="../../_assets/framework-agnostic.svg" title="Framework agnostic">
+                    imgsrc="../../_assets/framework-agnostic.svg" title="Framework Agnostic">
                     Biotope works with any framework - Angular, React, Vue, etc. so there won't be any compatability issues. Use whichever you want. Or switch when it suits you.
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
@@ -48,7 +48,7 @@
                 </bio-benefit>
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-open-source.svg" title="100% Open Source">
-                    Biotope's entire toolchain is free. it is maintained by a community of professional developers.
+                    Biotope's entire toolchain is free. It is maintained by a community of professional developers.
                 </bio-benefit>
             </div>
         </div>
@@ -181,11 +181,11 @@
             <div class="extendedBenefits__container">
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-quality-focus.svg" title="Quality Focus">
-                    Develop high quality components instead of the architecture and development environment required. That's Biotope's job.
+                    Develop high quality components instead of the architecture and development environment required. (That's Biotope's job).
                 </bio-benefit>
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-consistent-design.svg" title="Consistent Design">
-                    Roll out your interface from a single point of truth - simultaneously for all of your digital products. Keep your brand identity consistent across all your websites, apps or IoT say goodbye to design debt.
+                    Roll out your interface from a single point of truth - simultaneously for all of your digital products. Keep your brand identity consistent across all your websites, apps or IoT. Say goodbye to design debt.
                 </bio-benefit>
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                     imgsrc="../../_assets/icon-scalability.svg" title="Scalable Infrastructure">
@@ -234,7 +234,7 @@
             </a>
             <div class="footer__checkItOut">
                 <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
-                <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://github.com/biotope/website">
+                <bio-button title="See how" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]" url="https://github.com/biotope/website">
                 </bio-button>
             </div>
             <div class="footer__essentials">
