--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -298,10 +298,10 @@
                 <h4>Legal Note</h4>
                 <p>Copyright | Copyright © 2002-2019 Virtual Identity AG. All rights reserved.</p>
                 <p>The contents of the website of Virtual Identity AG are proteced by copyright and may not be 
-                    reproduced, Duplicated or distributed in any form without the written consent of Virtual Identity AG.
+                    reproduced, duplicated or distributed in any form without the written consent of Virtual Identity AG.
                 </p>
                 <p><strong>Disclaimer</strong> | We check and update the information offered on our website regularly. 
-                Despite careful control, the information proided on the website may have changed. Therefore no liability 
+                Despite careful control, the information provided on the website may have changed. Therefore no liability 
                 or guarantee for the topicality, correctness and comleteness can be taken over. The content of linked pages 
                 are the sole responsibility of their operators.</p>
             </section>
@@ -335,8 +335,8 @@
                 e-mail: info@virtual-identity.com</p>
                 <h4>2. Processing of Data</h4>
                 <p>Personal information is information about your identity. These include e.g. Information such as name, address, telephone number, e-mail address.</p>
-                <p>In general, you can visit our website wothout leaving personal data, e.g. if you only want to inform yourself about tour products and visit the corresponding page.
-                    The accesses made on our homepage and every retrieval of a file deposited on the gomepage are logged. The storage serice internal system-related and statistical purpouses.
+                <p>In general, you can visit our website without leaving personal data, e.g. if you only want to inform yourself about our products and visit the corresponding page.
+                    The accesses made on our homepage and every retrieval of a file deposited on the homepage are logged. The storage serice internal system-related and statistical purpouses.
                     The following are logged: browser type / version, operating system used, referrer URL (the previously visited page), host name of the accessing computer (IP address), time 
                     of service request. However, no personally identifiable information will be transmited by you and this information will be stored separately from any personally identifiable information 
                     transmitted. Additionally, the IP address of the requesting computers are logged.
