move animation.json to _assets

--- a/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
+++ b/src/components/BioScrollAnimation/scaffolding/BioScrollAnimation.hbs
@@ -1,5 +1,5 @@
 <bio-scroll-animation
-	animation-data-path="/components/BioScrollAnimation/animation.json"
+	animation-data-path="/_assets/animation.json"
 	slide-duration="1500"
 	scroll-length="12000"
 	data-resources="[{
