--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -78,13 +78,13 @@
 
 <section id="installation" class="installation">
 
-	<bio-swoosh color="#f8fbfd" direction="up" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#f8fbfd" direction="up" height="270" offset-x="-768" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
     <div class="row row--reducedWidth">
         <div class="col">
             <img class="installation__line" src="../_assets/BioEasySetUp/line.svg">
             <div class="installation__intro">
-                <h3>Biotope Installation </br> <strong>Start building <br> within minutes.</strong></h3>
+                <h3>Biotope Installation <br> <strong>Start building <br> within minutes.</strong></h3>
                 <p>
                     No complicated registration process. No hidden costs. No more big technology decisions at the beginning of each project -
                     Biotope works with any framework so you can build in the environment of your choice. And everyone else too. Build up your
@@ -176,7 +176,7 @@
     <div class="row row--reducedWidth">
         <div class="col">
                 <h3 class="inverted">
-                    Develop digital experiences </br> <strong>Flexible. Constant.<br> Across All Devices.</strong>
+                    Develop digital experiences <br> <strong>Flexible. Constant.<br> Across All Devices.</strong>
                 </h3>
             <div class="extendedBenefits__container">
                 <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
@@ -195,7 +195,7 @@
         </div>
     </div>
 
-	<bio-swoosh color="#0A0A2C" direction="down" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#0A0A2C" direction="down" height="270" offset-x="-768" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
 </section>
 
@@ -203,7 +203,7 @@
     <div class="row row--reducedWidth">
         <div class="col">
             <h3>
-                You are in </br> <strong>good company</strong>
+                You are in <br> <strong>good company</strong>
             </h3>
             <div class="company__logos">
                 <img src="../_assets/logo-ui.svg" alt="Union Investment">
@@ -225,7 +225,7 @@
 
 <footer class="footer">
 
-	<bio-swoosh color="#f8fbfd" direction="up" height="270" shift="-40" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
+	<bio-swoosh color="#f8fbfd" direction="up" height="270" offset-x="-768" data-resources="[{paths: ['components/BioSwoosh/index.js']}]"></bio-swoosh>
 
     <div class="row row--reducedWidth">
         <div class="col">
